--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script src="index.js"></script>
     </head>
     <body>
-        <img src="jkk.jpg" >
+        <img src="jkk.jpg" width="50" height="50" >
         <h1>Hello, I am Kibet</h1>
         <h2>About Me</h2>
         <ol>
