--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li>I have a degree in IT</li>
             <li>I am single</li>
         </ul>
-        <p>Find me on <a href="https://github.com/KORIRJK" >Github here</a></p>
+        <p>Find me on Github <a href="https://github.com/KORIRJK" > here</a></p>
         <input type="text" placeholder="Enter Email">
         <input type="button" value="Join Newsletter">
         
