--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <ul>
             <li>I love God</li>
             <li>I have a degree in IT</li>
+            <li>I am a coding enthusiast</li>
             <li>I am single</li>
+            
         </ul>
         <p>Find me on Github <a href="https://github.com/KORIRJK" > here</a></p>
         <input type="text" placeholder="Enter Email">
